ensure proper z-index

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -33,6 +33,7 @@ a {
   position:absolute;
   top:0;
   left:320px;
+  z-index:48;
   @media(max-width: $breakpoint-b) {
     width:100%!important;
     left:0;
